force-app/main/default/objects/ReplenishmentProposal__c/ReplenishmentProposal__c.object-meta.xml
<CustomObject>
    <label>Replenishment Proposal</label>
    <pluralLabel>Replenishment Proposals</pluralLabel>
    <nameField>
        <displayFormat>RPROP-{0000}</displayFormat>
        <label>Replenishment Proposal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Replenishment Proposals</relationshipLabel>
        <relationshipName>ReplenishmentProposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Replenishment Proposals</relationshipLabel>
        <relationshipName>ReplenishmentProposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProposedQty__c</fullName>
        <label>Proposed Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BasisJSON__c</fullName>
        <label>Basis JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConvertedToPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted To Primary</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>