force-app/main/default/objects/ReplenishmentProposal__c/fields/BasisJSON__c.field-meta.xml
<CustomField>
    <fullName>BasisJSON__c</fullName>
    <label>BasisJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>