force-app/main/default/objects/ReplenishmentProposal__c/fields/ConvertedToPrimary__c.field-meta.xml
<CustomField>
    <fullName>ConvertedToPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConvertedToPrimary</label>
    <type>Checkbox</type>
</CustomField>