force-app/main/default/objects/ReplenishmentProposal__c/fields/ProposedQty__c.field-meta.xml
<CustomField>
    <fullName>ProposedQty__c</fullName>
    <label>ProposedQty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>